# excalc-py

./: LICENSE  README.md  excalc.py  excalc_py.py  pyproject.toml
test/: conftest.py  test_adapt_function.py  test_book.xlsx  test_combined_decorators.py  test_excalc.py
